# pyChanneLab

./: .gitignore  LICENSE  PyChannel.py  PyChannelV2.py  README.md  fitting.py  gui.py  main.py  newgui.py  plotgui.py  pyproject.toml  requirements.txt  tips.py
Functions/: functions.py
Input/: loader.py
Loader/: loader.py
MM/: MMgui.py  MSM.py  marmod.py  newgui.py  trygui.py
Protocols/: gui.py  newgui.py  protocol.py
core/: protocols.py
docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: config.rst  curve_fitter.rst  data_loader.rst  index.rst  msm_builder.rst  optimizer.rst  protocols.rst  simulator.rst  torch_de.rst  torch_optimizer.rst  torch_simulator.rst
examples/: CS-Inactivation_WT.csv  Inactivation_WT.csv  README.md  Recovery_WT.csv
examples/exp_dataset/: Activation_WT.csv
nogui_pipeline/: analyze_results.py  config.py  data_loader.py  main.py  model.py  optimizer.py  protocols.py  simulator.py  test_structure.py  visualizer.py
src/pychannel_lab/: __init__.py  _cli.py  app.py  cli.py  helpers.py
src/pychannel_lab/core/: config.py  curve_fitter.py  data_loader.py  model.py  msm_builder.py  optimizer.py  protocols.py  simulator.py  torch_de.py  torch_optimizer.py  torch_simulator.py
src/pychannel_lab/tabs/: builder.py  data.py  optimise.py  preview.py  protocols.py  results.py
test/: conftest.py
test/integration/: test_de_global.py
test/unit/: test_gradient_optimizers.py  test_msm_builder.py  test_simulator.py
