[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.extra-build-dependencies]
pychannelab = ["setuptools>=68"]

[project]
name = "pychannelab"
version = "0.1.0"
description = "Ion channel Markov State Model fitting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "streamlit>=1.35",
    "plotly>=5.20",
    "torch>=2.2",
    "matplotlib>=3.10",
]

[project.scripts]
pychannelab = "pychannel_lab.cli:main"

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "sphinxcontrib-napoleon>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "sphinxcontrib-napoleon>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
